compiler/tests/en/errors/slice_non_array.salam
// EXPECT: E021
func main:
    x i32 = 5
    y auto = x[1:2]
    __ y
end
